// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-user-route performs invalid json schema validation 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "MIN_LENGTH",
      "description": "User name",
      "message": "String is too short (1 chars), minimum 3",
      "params": Array [
        1,
        3,
      ],
      "path": "#/name",
      "schemaId": undefined,
    },
  ],
  "isValid": false,
}
`;

exports[`get-user-route performs valid json schema validation 1`] = `
Object {
  "errors": Array [],
  "isValid": true,
}
`;

exports[`get-user-route provides schema endpoint 1`] = `undefined`;

exports[`get-user-route schema validation fails if missing validator 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "INVALID_FORMAT",
      "description": "User name",
      "message": "Object didn't pass validation for format throws-error: Jack Daniels",
      "params": Array [
        "throws-error",
        "Jack Daniels",
      ],
      "path": "#/",
      "schemaId": null,
    },
  ],
  "isValid": false,
}
`;
